class.c: refactor class_instance_method_list

* class.c (class_instance_method_list): gather singleton and
  extended methods first separately from ancestors.
  [ruby-core:90872] [Bug #15501]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@66764 b2dd03c8-39d4-4d8f-98ff-823fe69b080e